--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,12 @@
     "@mdi/font": "^3.6.95",
     "axios": "^0.21.0",
     "core-js": "^3.6.5",
+    "crypto-js": "^4.0.0",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuelidate": "^0.7.6",
     "vuetify": "^2.2.11",
     "vuex": "^3.4.0"
   },
