--- a/SocialSolutions/appsettings.json
+++ b/SocialSolutions/appsettings.json
@@ -15,7 +15,7 @@
   },
   "ConnectionStrings": {
     "release_con": "Data Source=SQL5097.site4now.net;Initial Catalog=DB_A698DD_zzenn1337;User Id=DB_A698DD_zzenn1337_admin;Password=4q3q2q1q",
-    "debug_con": "Data Source=localhost; Database=socialSolutions_db; Trusted_Connection=True;"
+    "debug_con": "Data Source=SQL5097.site4now.net;Initial Catalog=DB_A698DD_zzenn1337;User Id=DB_A698DD_zzenn1337_admin;Password=4q3q2q1q"
   },
   "superJob_ApiKey": "v3.r.133137306.68a93c968533e6928209b1a8db43a1a5479bc1fa.b2d2d31eb305aaa014aaabff6e60d7e1b12809db"
 }
