--- a/SocialSolutions/docker-compose.yml
+++ b/SocialSolutions/docker-compose.yml
@@ -1,12 +1,13 @@
 ﻿version: '3'
 services:
-    my-sql: 
+    my-sql-container: 
         image: mysql
-        enviroment:
+        environment:
             MYSQL_ROOT_PASSWORD: "123456"
         ports:
             - "1111:3306"
     web-app:
-        image: zen1488/socialsolutions:latest
+        build: .
         ports:
-            - "5001:80"
+            - "5001:443"
+            - "5000:80"
