--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "register-service-worker": "^1.7.1",
     "roboto-fontface": "*",
     "ubuntu-fontface": "^0.1.13",
